Fix font size of random content on small screens

--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,9 @@ body > div{
 
 /* ===== RESPONSIVE HANDLERS ===== */
 @media(max-width: 768px){
+    #random-container{
+        font-size: 2vh;
+    }
     #banner{
         flex-direction: column;
     }
